close icon small fix

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -215,12 +215,16 @@ a
 		margin-bottom: 45px
 		text-align: left
 		color: #FFF
-		letter-spacing: 0.05
+		letter-spacing: 0.05em
 	+r2
 		padding: 100px 50px 68px
 	+r3
 		padding: 50px 20px 34px
-
+		&__close
+			top: 15px
+			right: 10px
+		.h2
+			text-align: center
 
 .close-ico
 	position: relative
